--- a/backend/cleanair-route/Dockerfile
+++ b/backend/cleanair-route/Dockerfile
@@ -1,4 +1,3 @@
-# Python 3.11 슬림 이미지 사용
 FROM python:3.11-slim
 
 # 작업 디렉토리 설정
@@ -8,6 +7,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Python 의존성 설치
@@ -20,9 +20,5 @@ COPY . .
 # 포트 노출
 EXPOSE 8000
 
-# 헬스체크
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/api/v1/health || exit 1
-
 # 애플리케이션 실행
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
