--- a/backend/services/ai-prediction/Dockerfile
+++ b/backend/services/ai-prediction/Dockerfile
@@ -1,4 +1,3 @@
-# Python 3.11 슬림 이미지 사용
 FROM python:3.11-slim
 
 # 작업 디렉토리 설정
@@ -8,25 +7,18 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
-    curl \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Python 의존성 설치
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# 모델 파일 복사 (있는 경우)
-COPY models/ ./models/
-
 # 애플리케이션 코드 복사
 COPY . .
 
 # 포트 노출
-EXPOSE 8002
-
-# 헬스체크
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8002/health || exit 1
+EXPOSE 5002
 
 # 애플리케이션 실행
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8002"]
+CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5002"]
