--- a/backend/services/ai-prediction/requirements.txt
+++ b/backend/services/ai-prediction/requirements.txt
@@ -1,9 +1,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
-numpy==1.25.2
-pandas==2.1.3
-scikit-learn==1.3.2
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
 joblib==1.3.2
-python-multipart==0.0.6
+pydantic==2.5.0
+pydantic-settings==2.1.0
 python-dotenv==1.0.0
