--- a/backend/services/data-ingestion/requirements.txt
+++ b/backend/services/data-ingestion/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
 asyncpg==0.29.0
 httpx==0.25.2
+pydantic==2.5.0
+pydantic-settings==2.1.0
 apscheduler==3.10.4
-python-multipart==0.0.6
 python-dotenv==1.0.0
